# rustrank

./: .gitignore  AGENTS.md  Cargo.toml  README.md  README_REAL_REPO_VALIDATION.md
.forgejo/workflows/: ci.yml
.githooks/: pre-push
docs/: IMPLEMENTATION.md  SPEC.md
docs/superpowers/plans/: 2025-05-16-rustank-implementation.md  2026-06-27-near-gitnexus-parity-remaining.md  2026-06-27-parallel-remaining-risks.md
docs/superpowers/specs/: 2026-05-16-rustank-design.md
scripts/: smoke_http_json.py
src/: Cargo.toml
src/src/: context.rs  embeddings.rs  error.rs  fmt.rs  index.rs  lib.rs  main.rs  process.rs  project_config.rs
src/src/tools/: agent.rs  analysis.rs  code_rank.rs  config.rs  index.rs  mod.rs  search.rs  trace.rs
src/tests/: fixtures.rs  integration.rs
