[package]
name = "rustrank"
version = "0.1.6"
edition = "2024"
description = "RustRank MCP server for repository analysis"

[dependencies]
anyhow = "1"
axum = "0.8"
blake3 = "1"
git2 = "0.20"
graphops = "=0.4.1"
grep = "0.3"
indexmap = "2"
once_cell = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rmcp = { version = "=1.7.0", features = ["transport-io", "transport-streamable-http-server", "macros"] }
rmcp-macros = "=1.7.0"
rustpython-parser = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors"] }
tree-sitter = "0.25"
tree-sitter-c-sharp = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24"
tree-sitter-typescript = "0.23"
walkdir = "2"

[dev-dependencies]
tempfile = "3"
